added userHandler and pod files for firebase authentication

--- a/Mappy/Podfile
+++ b/Mappy/Podfile
@@ -11,6 +11,6 @@ target 'Mappy' do
   pod 'Firebase/Firestore'
   pod 'Firebase/Analytics'
 
-
+  pod 'Firebase/Auth'
   pod 'FirebaseFirestoreSwift'
 end
