--- a/Mappy/Podfile
+++ b/Mappy/Podfile
@@ -1,9 +1,10 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+# source 'https://github.com/CocoaPods/Specs.git'
+platform :ios, '13.2'
+use_frameworks!
 
 target 'Mappy' do
   # Comment the next line if you don't want to use dynamic frameworks
-  use_frameworks!
 
   # Pods for Mappy
   pod 'Firebase/Core'
@@ -13,4 +14,6 @@ target 'Mappy' do
 
   pod 'Firebase/Auth'
   pod 'FirebaseFirestoreSwift'
+
+  pod 'Kingfisher','~> 5.0'
 end
