--- a/Mappy/Podfile
+++ b/Mappy/Podfile
@@ -1,6 +1,6 @@
 # Uncomment the next line to define a global platform for your project
 # source 'https://github.com/CocoaPods/Specs.git'
-platform :ios, '13.2'
+platform :ios, '13.1'
 use_frameworks!
 
 target 'Mappy' do
@@ -15,5 +15,5 @@ target 'Mappy' do
   pod 'Firebase/Auth'
   pod 'FirebaseFirestoreSwift'
 
-  pod 'Kingfisher','~> 5.0'
+  pod 'Kingfisher'
 end
